--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,8 @@ baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://github.sharedit.com" # the base hostname & protocol for your site
 github_username:  clarkguru
 markdown: kramdown
+kramdown:
+  input: GFM
 highlighter: pygments # or rouge or null
 exclude: ["node_modules", "gulpfile.js", "package.json"]
 sass:
