--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
   "author": "Shane Osbourne",
   "license": "ISC",
   "devDependencies": {
-    "gulp": "^3.8.8",
-    "browser-sync": "^1.3.7",
-    "gulp-autoprefixer": "1.0.0"
+    "browser-sync": "^2.11.1",
+    "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^3.1.0"
   },
   "repository": {
     "type": "git",
