--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ github_username:  clarkguru
 markdown: kramdown
 kramdown:
   input: GFM
-highlighter: pygments # or rouge or null
+highlighter: rouge # or rouge or null
 exclude: ["node_modules", "gulpfile.js", "package.json"]
 sass:
     sass_dir: assets/css
